--- a/css/main.css
+++ b/css/main.css
@@ -396,33 +396,35 @@ body::-webkit-scrollbar-track {
 }
 .header__burger {
   position: relative;
-  width: 5.1282051282vw;
-  height: 3.3333333333vw;
+  width: 7.1794871795vw;
+  height: 5.3846153846vw;
+  padding: 1.0256410256vw;
   z-index: 3000;
 }
 .header__burger span {
   position: absolute;
   background-color: #341E0B;
-  left: 0;
+  left: 1.0256410256vw;
   width: 100%;
   height: 1px;
-  top: 1.5384615385vw;
+  width: 5.1282051282vw;
+  top: 2.5641025641vw;
   transition: all 0.3s ease 0s;
 }
 .header__burger::before, .header__burger::after {
   content: "";
   background-color: #341E0B;
   position: absolute;
-  width: 100%;
+  width: 5.1282051282vw;
   height: 1px;
-  left: 0;
+  left: 1.0256410256vw;
   transition: all 0.3s ease 0s;
 }
 .header__burger::before {
-  top: 0;
+  top: 1.0256410256vw;
 }
 .header__burger::after {
-  bottom: 0;
+  bottom: 1.0256410256vw;
 }
 .header__burger.active span {
   transform: scale(0);
@@ -430,12 +432,12 @@ body::-webkit-scrollbar-track {
 }
 .header__burger.active::before {
   transform: rotate(45deg);
-  top: 1.5384615385vw;
+  top: 2.5641025641vw;
   background-color: rgba(255, 230, 209, 0.6);
 }
 .header__burger.active::after {
   transform: rotate(-45deg);
-  bottom: 1.5384615385vw;
+  bottom: 2.5641025641vw;
   background-color: rgba(255, 230, 209, 0.6);
 }
 .header__menu-mobile {
@@ -2603,10 +2605,26 @@ body::-webkit-scrollbar-track {
   padding-top: 4.3333333333vw;
   padding-bottom: 4.7619047619vw;
 }
+@media (max-width: 479.98px) {
+  .service {
+    padding-top: 23.0769230769vw;
+    padding-bottom: 12.8205128205vw;
+  }
+}
 .service__container {
   max-width: 59.619047619vw;
   width: 100%;
   margin: 0 auto;
+}
+@media (max-width: 479.98px) {
+  .service__container {
+    max-width: 84.6153846154vw;
+  }
+}
+@media (max-width: 479.98px) {
+  .service .f_breadcrumb {
+    display: none;
+  }
 }
 .service__h2 {
   margin-top: 4.7619047619vw;
@@ -2615,6 +2633,14 @@ body::-webkit-scrollbar-track {
   line-height: 97.3%;
   color: #492E18;
   padding-left: 0;
+}
+@media (max-width: 479.98px) {
+  .service__h2 {
+    margin-top: 0;
+    font-size: 8.2051282051vw;
+    font-weight: 500;
+    margin-bottom: 5.1282051282vw;
+  }
 }
 .service .accordion .card,
 .service .accordion .card-header {
@@ -2626,8 +2652,20 @@ body::-webkit-scrollbar-track {
   border-top: 1px solid #CC3312;
   padding: 2.8571428571vw 0;
 }
+@media (max-width: 479.98px) {
+  .service .accordion .card {
+    padding: 7.6923076923vw 0;
+    border: none;
+    box-shadow: 0px -0.0961538462vw 0px 0px #CC3312;
+  }
+}
 .service .accordion .card:first-child {
   border-top: none;
+}
+@media (max-width: 479.98px) {
+  .service .accordion .card:first-child {
+    box-shadow: none;
+  }
 }
 .service .accordion .card-header {
   padding: 0;
@@ -2636,6 +2674,11 @@ body::-webkit-scrollbar-track {
   padding: 0;
   padding-top: 2.380952381vw;
 }
+@media (max-width: 479.98px) {
+  .service .accordion .card-body ul {
+    margin-bottom: 0;
+  }
+}
 .service .accordion .card-body li {
   display: flex;
   justify-content: space-between;
@@ -2643,14 +2686,30 @@ body::-webkit-scrollbar-track {
 .service .accordion .card-body li p {
   margin-bottom: 1.4285714286vw;
 }
+@media (max-width: 479.98px) {
+  .service .accordion .card-body li p {
+    font-size: 4.1025641026vw;
+  }
+}
 .service .accordion .card-body li p:first-child {
   font-size: 1.9047619048vw;
   line-height: 107.5%;
   color: #492E18;
 }
+@media (max-width: 479.98px) {
+  .service .accordion .card-body li p:first-child {
+    font-size: 4.1025641026vw;
+    max-width: 39.7435897436vw;
+  }
+}
 .service .accordion .card-body li p:first-child span {
   font-size: 1.9047619048vw;
   color: rgba(73, 46, 24, 0.8);
+}
+@media (max-width: 479.98px) {
+  .service .accordion .card-body li p:first-child span {
+    font-size: 4.1025641026vw;
+  }
 }
 .service .accordion .card-body li p:last-child {
   width: 24.380952381vw;
@@ -2659,6 +2718,14 @@ body::-webkit-scrollbar-track {
   font-size: 1.9047619048vw;
   line-height: 107.5%;
   color: #492E18;
+}
+@media (max-width: 479.98px) {
+  .service .accordion .card-body li p:last-child {
+    font-size: 3.5897435897vw;
+    width: 39.7435897436vw;
+    font-style: normal;
+    padding-top: 0.5128205128vw;
+  }
 }
 .service .accordion .card-body li:last-child p {
   margin-bottom: 0;
@@ -2686,9 +2753,20 @@ body::-webkit-scrollbar-track {
   color: #492E18;
   margin-bottom: 0;
 }
+@media (max-width: 479.98px) {
+  .service__accord h3 {
+    font-size: 4.1025641026vw;
+    max-width: 38.9743589744vw;
+  }
+}
 .service__accord-wrap {
   position: relative;
   width: 24.380952381vw;
+}
+@media (max-width: 479.98px) {
+  .service__accord-wrap {
+    width: 39.7435897436vw;
+  }
 }
 .service__accord-wrap-text {
   font-style: italic;
@@ -2698,13 +2776,25 @@ body::-webkit-scrollbar-track {
   color: #492E18;
   margin-bottom: 0;
 }
+@media (max-width: 479.98px) {
+  .service__accord-wrap-text {
+    font-size: 3.5897435897vw;
+    padding-right: 7.6923076923vw;
+  }
+}
 .service__accord-arrow {
   width: 5.2380952381vw;
   height: 1.0476190476vw;
   position: absolute;
   right: 0;
   top: 0.4761904762vw;
-  transition: all 0.3s ease 0s;
+  transition: all 0.2s ease 0s;
+}
+@media (max-width: 479.98px) {
+  .service__accord-arrow {
+    width: 7.6923076923vw;
+    height: 1.5384615385vw;
+  }
 }
 .service__accord-arrow img {
   width: 100%;
@@ -2728,6 +2818,14 @@ body::-webkit-scrollbar-track {
   border-radius: 50%;
   border: 2px solid #492E18;
 }
+@media (max-width: 479.98px) {
+  .service__btn a {
+    border: 1px solid #492E18;
+    max-width: 23.3333333333vw;
+    height: 23.3333333333vw;
+    margin-top: 5.1282051282vw;
+  }
+}
 .service__btn a:hover img {
   transform: rotate(-46deg);
 }
@@ -2743,6 +2841,12 @@ body::-webkit-scrollbar-track {
   font-size: 2.2857142857vw;
   line-height: 159.5%;
   color: #492E18;
+}
+@media (max-width: 479.98px) {
+  .service__btn a span {
+    font-size: 4.1025641026vw;
+    left: -8.9743589744vw;
+  }
 }
 
 .footer__services {
@@ -2760,6 +2864,11 @@ body::-webkit-scrollbar-track {
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   margin-top: 4.7619047619vw;
 }
+@media (max-width: 479.98px) {
+  .works-line {
+    margin-top: 12.8205128205vw;
+  }
+}
 
 .works,
 .works2,
@@ -2773,6 +2882,20 @@ body::-webkit-scrollbar-track {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 479.98px) {
+  .works .bread__container,
+.works2 .bread__container,
+.works3 .bread__container {
+    max-width: 84.6153846154vw;
+  }
+}
+@media (max-width: 479.98px) {
+  .works .bread__container .f_breadcrumb,
+.works2 .bread__container .f_breadcrumb,
+.works3 .bread__container .f_breadcrumb {
+    display: none;
+  }
+}
 .works__container, .works__container2, .works__container3,
 .works2__container,
 .works2__container2,
@@ -2784,6 +2907,17 @@ body::-webkit-scrollbar-track {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 479.98px) {
+  .works__container, .works__container2, .works__container3,
+.works2__container,
+.works2__container2,
+.works2__container3,
+.works3__container,
+.works3__container2,
+.works3__container3 {
+    max-width: 69.2307692308vw;
+  }
+}
 .works__h2,
 .works2__h2,
 .works3__h2 {
@@ -2793,6 +2927,15 @@ body::-webkit-scrollbar-track {
   line-height: 97.3%;
   color: #492E18;
   padding-left: 0;
+}
+@media (max-width: 479.98px) {
+  .works__h2,
+.works2__h2,
+.works3__h2 {
+    margin-top: 12.8205128205vw;
+    margin-bottom: 6.4102564103vw;
+    font-size: 5.1282051282vw;
+  }
 }
 .works__slider1, .works__slider2, .works__slider3,
 .works2__slider1,
@@ -2828,6 +2971,17 @@ body::-webkit-scrollbar-track {
 .works3__slider2-item,
 .works3__slider3-item {
   width: 47.619047619vw;
+}
+@media (max-width: 479.98px) {
+  .works__slider1-item, .works__slider2-item, .works__slider3-item,
+.works2__slider1-item,
+.works2__slider2-item,
+.works2__slider3-item,
+.works3__slider1-item,
+.works3__slider2-item,
+.works3__slider3-item {
+    width: 69.2307692308vw;
+  }
 }
 .works__slider1-item img, .works__slider2-item img, .works__slider3-item img,
 .works2__slider1-item img,
@@ -2879,6 +3033,19 @@ body::-webkit-scrollbar-track {
   width: 4.7619047619vw;
   height: 1.0476190476vw;
 }
+@media (max-width: 479.98px) {
+  .works__slider1 .slick-arrow, .works__slider2 .slick-arrow, .works__slider3 .slick-arrow,
+.works2__slider1 .slick-arrow,
+.works2__slider2 .slick-arrow,
+.works2__slider3 .slick-arrow,
+.works3__slider1 .slick-arrow,
+.works3__slider2 .slick-arrow,
+.works3__slider3 .slick-arrow {
+    width: 7.6923076923vw;
+    height: 1.5384615385vw;
+    right: -11.2820512821vw;
+  }
+}
 .works__slider1 .slick-arrow.slick-prev, .works__slider2 .slick-arrow.slick-prev, .works__slider3 .slick-arrow.slick-prev,
 .works2__slider1 .slick-arrow.slick-prev,
 .works2__slider2 .slick-arrow.slick-prev,
@@ -2889,6 +3056,17 @@ body::-webkit-scrollbar-track {
   transform: rotate(180deg);
   background: url("../img/arrow-work.svg") center/contain no-repeat;
   left: -7.619047619vw;
+}
+@media (max-width: 479.98px) {
+  .works__slider1 .slick-arrow.slick-prev, .works__slider2 .slick-arrow.slick-prev, .works__slider3 .slick-arrow.slick-prev,
+.works2__slider1 .slick-arrow.slick-prev,
+.works2__slider2 .slick-arrow.slick-prev,
+.works2__slider3 .slick-arrow.slick-prev,
+.works3__slider1 .slick-arrow.slick-prev,
+.works3__slider2 .slick-arrow.slick-prev,
+.works3__slider3 .slick-arrow.slick-prev {
+    left: -11.2820512821vw;
+  }
 }
 .works__slider1 .slick-arrow.slick-next, .works__slider2 .slick-arrow.slick-next, .works__slider3 .slick-arrow.slick-next,
 .works2__slider1 .slick-arrow.slick-next,
@@ -2912,4 +3090,9 @@ body::-webkit-scrollbar-track {
 
 .works3 {
   padding-bottom: 11.9047619048vw;
+}
+@media (max-width: 479.98px) {
+  .works3 {
+    padding-bottom: 15.3846153846vw;
+  }
 }
